Bind __start/__stop symbols as symbolic in shared object

When building shared objects, bind __start and __stop symbols as symbolic
to support dlsym.  Also override __start, __stop, .startof. and .sizeof.
symbols defined in a shared object.

See:

http://lists.gnu.org/archive/html/bug-binutils/2017-08/msg00195.html

for bug discussions.

bfd/

	PR ld/21964
	* elf-bfd.h (SYMBOLIC_BIND): TRUE for __start/__stop symbols.
	* elflink.c (bfd_elf_define_start_stop): Override symbol defined
	in a shared object.  Don't mark __start/__stop symbols as hidden
	in shared objects.

ld/

	PR ld/21964
	* testsuite/ld-elf/pr21562a.d: Replace LOCAL with GLOBAL on
	__start_scnfoo.
	* testsuite/ld-elf/pr21562b.d: Likewise.
	* testsuite/ld-elf/pr21562c.d: Likewise.
	* testsuite/ld-elf/pr21562d.d: Likewise.
	* testsuite/ld-elf/pr21562e.d: Likewise.
	* testsuite/ld-elf/pr21562f.d: Likewise.
	* testsuite/ld-elf/pr21562g.d: Likewise.
	* testsuite/ld-elf/pr21562h.d: Likewise.
	* testsuite/ld-elf/pr21562i.d: Likewise.
	* testsuite/ld-elf/pr21562j.d: Likewise.
	* testsuite/ld-elf/pr21562k.d: Likewise.
	* testsuite/ld-elf/pr21562l.d: Likewise.
	* testsuite/ld-elf/pr21562m.d: Likewise.
	* testsuite/ld-elf/pr21562n.d: Likewise.
	* testsuite/ld-elf/pr21964-1a.c: New file.
	* testsuite/ld-elf/pr21964-1b.c: Likewise.
	* testsuite/ld-elf/pr21964-1c.c: Likewise.
	* testsuite/ld-elf/pr21964-2a.c: Likewise.
	* testsuite/ld-elf/pr21964-2b.c: Likewise.
	* testsuite/ld-elf/pr21964-2c.c: Likewise.
	* testsuite/ld-elf/shared.exp: Run PR ld/21964 tests.
	* testsuite/ld-elf/sizeofb.d: Replace LOCAL with GLOBAL on
	__stop_scnfoo.
	* testsuite/ld-elf/startofb.d: Replace LOCAL with GLOBAL on
	__start_scnfoo.